# hyperbolic-raycaster-rust

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build-web-release.sh  build-web.sh  index.html  log.txt
assets/: 5square.json  map.json  map.txt  poncairemap.json  poncairemap2.json  poncairemap2large.json  singlewall.json
helpers/map/: map.js  map.json  poncairemap.json
html/: hyperbolic-raycaster.js  hyperbolic_raycaster.wasm  hyperbolic_raycaster.wasm.map  index.html  raycaster.js  raycaster.wasm  raycaster.wasm.map
src/: emscripten.rs  main.rs
src/game/: hypermap.rs  map.rs  mod.rs  player.rs
src/hyperbolic_renderer/: mod.rs  ray.rs
src/poincare_renderer/: mod.rs
src/poncaire_renderer/: mod.rs  ray.rs
src/utils/: color.rs  geometry.rs  hyperpoint.rs  mod.rs  poincarepoint.rs  point.rs  poncairepoint.rs
src/window/: canvas.rs  event.rs  mod.rs  view.rs
