[package]
name = "raycaster"
version = "0.1.0"
authors = ["Friedrich Ruynat <friedrich@hydrixos.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = {version = "*", features = ["serde-serialize"]}
line_drawing = "*"
console_error_panic_hook = "0.1.6"

[dependencies.sdl2]
version = "0.31.0"

[profile.dev]
opt-level = 0