[package]
name = "raycaster"
version = "0.1.0"
authors = ["Friedrich Ruynat <friedrich@hydrixos.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = {version = "*", features = ["serde-serialize"]}
line_drawing = "*"
console_error_panic_hook = "0.1.6"
web-sys = {version = "*", features = ["Window"]}
wasm-bindgen = "*"

[dependencies.sdl2]
version = "*"

[profile.dev]
opt-level = 3