[package]
name = "hyperbolic-raycaster"
version = "0.1.0"
authors = ["Michał Flak <michal@mflak.eu>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = {version = "*", features = ["serde-serialize"]}
line_drawing = "*"
console_error_panic_hook = "0.1.6"

[dependencies.sdl2]
version = "*"

[profile.dev]
opt-level = 3